# PlayIt

./: .gitignore  Cargo.toml  README.md  shell.nix
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/ipc/: client.rs  server.rs
engine/src/player/: database.rs  mod.rs  sequencer.rs
src/: database.rs  ipc.rs  main.rs
src/audio/: mod.rs  playback.rs
